Fixed navbar open on mobile menu

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,10 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+@media (max-width: 1199.98px){
+    .left-sidebar { transform: translateX(-100%); transition: transform .2s ease; }
+    .show-sidebar .left-sidebar { transform: translateX(0); }
+    .body-wrapper { margin-left: 0 !important; }
+  }
+  
